--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <script src="./script.js"></script>
 </head>
 <body>
+    <h2>Check the console log to see the answer to factorial 4!</h2>
+    <h2>Or type f(n) and put any number instad of n to get its factorial!</h2>
+
+    <br>
+    <h2>Enter Your name and Date Of Birth</h2>
+    <input type="text" placeholder="first and last name" id="FnameLname">
+    <input type="date" name="" id="date">
+    <button onclick="Check()">Calculate</button>
+    
     
 </body>
 </html>
